--- a/helm/prod/mid/idpay-initiative-statistics/values.yaml
+++ b/helm/prod/mid/idpay-initiative-statistics/values.yaml
@@ -16,7 +16,7 @@ microservice-chart:
       cpu: "600m"
 
   deployment:
-    replica: 3 # This value must be set equal to autoscaling.minReplica
+    replicas: 3 # This value must be set equal to autoscaling.minReplica
 
   autoscaling:
     enable: true
