--- a/helm/prod/mid/idpay-portal-welfare-backend-role-permission/values.yaml
+++ b/helm/prod/mid/idpay-portal-welfare-backend-role-permission/values.yaml
@@ -20,7 +20,7 @@ microservice-chart:
       cpu: "600m"
 
   deployment:
-    replica: 3 # This value must be set equal to autoscaling.minReplica
+    replicas: 3 # This value must be set equal to autoscaling.minReplica
 
   autoscaling:
     enable: true
