--- a/helm/prod/top/idpay-asset-register-backend/values.yaml
+++ b/helm/prod/top/idpay-asset-register-backend/values.yaml
@@ -16,7 +16,7 @@ microservice-chart:
       cpu: "1000m"
 
   deployment:
-    replica: 6 # This value must be set equal to autoscaling.minReplica
+    replicas: 6 # This value must be set equal to autoscaling.minReplica
 
   autoscaling:
     enable: true
