--- a/helm/prod/top/idpay-onboarding-workflow/values.yaml
+++ b/helm/prod/top/idpay-onboarding-workflow/values.yaml
@@ -16,7 +16,7 @@ microservice-chart:
       cpu: "4"
 
   deployment:
-    replica: 18 # This value must be set equal to autoscaling.minReplica
+    replicas: 18 # This value must be set equal to autoscaling.minReplica
 
   autoscaling:
     enable: true
