--- a/helm/_global/idpay-transactions.yaml
+++ b/helm/_global/idpay-transactions.yaml
@@ -82,6 +82,7 @@ microservice-chart:
 
     rest-client:
       PDV_BASE_URL: pdv_decrypt_base_url
+      MERCHANT_BASE_URL: idpay_merchant_host
 
   envSecret:
     MONGODB_URI: mongodb-primary-connection-string
