--- a/helm/_global/idpay-wallet.yaml
+++ b/helm/_global/idpay-wallet.yaml
@@ -135,7 +135,7 @@ microservice-chart:
 # 2. Set canaryDelivery.create: true
 # 3. Configure the hotfix image tag in canaryDelivery.image.tag
 # 4. Revert for remove canary deployment
-#  nameOverride: "canary"
+  nameOverride: "canary"
   canaryDelivery:
     create: true
     ingress:
