--- a/helm/_global/idpay-wallet.yaml
+++ b/helm/_global/idpay-wallet.yaml
@@ -135,16 +135,16 @@ microservice-chart:
 # 2. Set canaryDelivery.create: true
 # 3. Configure the hotfix image tag in canaryDelivery.image.tag
 # 4. Revert for remove canary deployment
-  nameOverride: "canary"
+#  nameOverride: "canary"
   canaryDelivery:
-    create: true
+    create: false
     ingress:
       header: true
       headerName: X-Canary
       headerValue: canary
-      weightPercent: 50
+      weightPercent: 10
     image:
       repository: ghcr.io/pagopa/idpay-wallet
-      tag: v1.8.1@sha256:26113ca1ddada6fd175b675aa7aaccede55456e2c539c8f582e645ccbb410ae3
+      tag: <HOT_FIX_IMAGE_HERE>
     envSecret: {}
     envConfig: {}
