--- a/helm/_global/idpay-transactions.yaml
+++ b/helm/_global/idpay-transactions.yaml
@@ -120,16 +120,16 @@ microservice-chart:
 # 2. Set canaryDelivery.create: true
 # 3. Configure the hotfix image tag in canaryDelivery.image.tag
 # 4. Revert for remove canary deployment
-  nameOverride: "canary"
+#  nameOverride: "canary"
   canaryDelivery:
-    create: true
+    create: false
     ingress:
       header: true
       headerName: X-Canary
       headerValue: canary
-      weightPercent: 50
+      weightPercent: 10
     image:
       repository: ghcr.io/pagopa/idpay-transactions
-      tag: v1.7.1@sha256:c4fee7bd27641cc5e2ca07739e8a33cf8f12757b27afbec5d5f82bd45a5bc4ab
+      tag: <HOT_FIX_IMAGE_HERE>
     envSecret: {}
     envConfig: {}
