fix: change APPLICATIONINSIGHTS_INSTRUMENTATION_LOGGING_LEVEL to INFO

--- a/helm/_global/idpay-ranker.yaml
+++ b/helm/_global/idpay-ranker.yaml
@@ -54,7 +54,7 @@ microservice-chart:
     SB_ONBOARDING_REQUEST_TOPIC: "idpay-onboarding-request"
     SB_ONBOARDING_OUTCOME_TOPIC: "idpay-admissibility-request"
     APPLICATIONINSIGHTS_ROLE_NAME: "idpayranker"
-    APPLICATIONINSIGHTS_INSTRUMENTATION_LOGGING_LEVEL: "OFF"
+    APPLICATIONINSIGHTS_INSTRUMENTATION_LOGGING_LEVEL: "INFO"
     APPLICATIONINSIGHTS_INSTRUMENTATION_MICROMETER_ENABLED: "false"
     APPLICATIONINSIGHTS_PREVIEW_PROFILER_ENABLED: "false"
     APPLICATIONINSIGHTS_SAMPLING_ENABLED: "false"
