--- a/helm/_global/idpay-timeline.yaml
+++ b/helm/_global/idpay-timeline.yaml
@@ -52,7 +52,7 @@ microservice-chart:
   envConfig:
     MONGODB_DBNAME: "idpay-beneficiari"
     APPLICATIONINSIGHTS_ROLE_NAME: "idpaytimeline"
-    APPLICATIONINSIGHTS_INSTRUMENTATION_LOGGING_LEVEL: "OFF"
+    APPLICATIONINSIGHTS_INSTRUMENTATION_LOGGING_LEVEL: "INFO"
     APPLICATIONINSIGHTS_INSTRUMENTATION_MICROMETER_ENABLED: "false"
     APPLICATIONINSIGHTS_SAMPLING_ENABLED: "false"
     APPLICATIONINSIGHTS_SAMPLING_PERCENTAGE: "100"
