--- a/helm/_global/idpay-transactions.yaml
+++ b/helm/_global/idpay-transactions.yaml
@@ -63,6 +63,7 @@ microservice-chart:
     HEALTH_MONGO_ENABLED: "false"
     BLOB_STORAGE_CONTAINER_REFERENCE: "invoices"
     INVOICE_STORAGE_SAS_DURATION_SECONDS: "60"
+    SCHEDULE_REWARD_BATCH_TO_EVALUATING: "0 0 1 * * ?"
 
   externalConfigMapValues:
     idpay-common:
