--- a/helm/_global/idpay-wallet.yaml
+++ b/helm/_global/idpay-wallet.yaml
@@ -135,16 +135,16 @@ microservice-chart:
 # 2. Set canaryDelivery.create: true
 # 3. Configure the hotfix image tag in canaryDelivery.image.tag
 # 4. Revert for remove canary deployment
-  nameOverride: "canary"
+#  nameOverride: "canary"
   canaryDelivery:
-    create: true
+    create: false
     ingress:
       header: true
       headerName: X-Canary
       headerValue: canary
-      weightPercent: 20
+      weightPercent: 10
     image:
       repository: ghcr.io/pagopa/idpay-wallet
-      tag: v1.9.2@sha256:46dee934ec594b99f7eb50647a1190d6b381bf8544a050653dff0eff2c97be3b
+      tag: <HOT_FIX_IMAGE_HERE>
     envSecret: {}
     envConfig: {}
