--- a/helm/prod/top/idpay-ranker/values.yaml
+++ b/helm/prod/top/idpay-ranker/values.yaml
@@ -1,7 +1,7 @@
 microservice-chart:
   image:
     repository: ghcr.io/pagopa/idpay-ranker
-    tag: v1.2.1@sha256:44bb51d3386b5b1267616f3e9e3840a5e042103e402421b8dc67456cb6a60298
+    tag: v1.3.0@sha256:d8e30514f45eb2f8ab269129ee83f206943e830aabcfafed6b41b5ce44427af5
     pullPolicy: Always
 
   ingress:
@@ -28,7 +28,7 @@ microservice-chart:
       -Djava.security.egd=file:/dev/./urandom
       -javaagent:/app/applicationinsights-agent.jar
       -Dapplicationinsights.configuration.file=/mnt/file-config-external/appinsights-config/applicationinsights.json
-    FORCE_STOPPED: "false"
+    FORCE_STOPPED: "true"
 
   envSecret:
     APPLICATIONINSIGHTS_CONNECTION_STRING: appinsights-instrumentation-key
