--- a/helm/_global/idpay-transactions.yaml
+++ b/helm/_global/idpay-transactions.yaml
@@ -88,6 +88,7 @@ microservice-chart:
     MONGODB_URI: mongodb-primary-connection-string
     EVH_CONNECTION_REWARD_RESPONSE: evh-idpay-transaction-idpay-transaction-consumer-jaas-config-idpay-00
     KAFKA_ERRORS_SASL_JAAS_CONFIG: evh-idpay-errors-idpay-errors-producer-jaas-config-idpay-01
+    KAFKA_TRANSACTION_OUTCOME_SASL_JAAS_CONFIG: evh-idpay-transaction-idpay-transaction-producer-jaas-config-idpay-00
     KAFKA_COMMANDS_SASL_JAAS_CONFIG: evh-idpay-commands-idpay-commands-consumer-jaas-config-idpay-01
     PDV_DECRYPT_API_KEY: pdv-api-key
     BLOB_STORAGE_ACCOUNT_NAME: refund-storage-account-name
