--- a/helm/dev/top/idpay-transactions/values.yaml
+++ b/helm/dev/top/idpay-transactions/values.yaml
@@ -1,7 +1,7 @@
 microservice-chart:
   image:
     repository: ghcr.io/pagopa/idpay-transactions
-    tag: snapshot-RDB-417-reversal-api
+    tag: snapshot-develop
     pullPolicy: Always
 
   ingress:
