--- a/helm/prod/top/idpay-ranker/values.yaml
+++ b/helm/prod/top/idpay-ranker/values.yaml
@@ -15,6 +15,8 @@ microservice-chart:
       memory: "1.5Gi"
       cpu: "1"
 
+  deployment:
+    replicas: 3
 # Never enable autoscaling because is used for service bus queue processing
   autoscaling:
     enable: false
