--- a/helm/prod/top/idpay-ranker/values.yaml
+++ b/helm/prod/top/idpay-ranker/values.yaml
@@ -15,6 +15,8 @@ microservice-chart:
       memory: "1.5Gi"
       cpu: "1"
 
+  deployment:
+    replicas: 3
 # Never enable autoscaling because is used for service bus queue processing
   autoscaling:
     enable: false
@@ -28,7 +30,7 @@ microservice-chart:
       -Djava.security.egd=file:/dev/./urandom
       -javaagent:/app/applicationinsights-agent.jar
       -Dapplicationinsights.configuration.file=/mnt/file-config-external/appinsights-config/applicationinsights.json
-    FORCE_STOPPED: "false"
+    FORCE_STOPPED: "true"
 
   envSecret:
     APPLICATIONINSIGHTS_CONNECTION_STRING: appinsights-instrumentation-key
