--- a/helm/prod/ext/idpay-iban/values.yaml
+++ b/helm/prod/ext/idpay-iban/values.yaml
@@ -15,6 +15,9 @@ microservice-chart:
       memory: "768Mi"
       cpu: "600m"
 
+  deployment:
+    replicas: 0 # This value must be set equal to autoscaling.minReplica
+
   autoscaling:
     enable: false
 
