--- a/helm/prod/top/idpay-portal-welfare-backend-initiative/values.yaml
+++ b/helm/prod/top/idpay-portal-welfare-backend-initiative/values.yaml
@@ -10,10 +10,10 @@ microservice-chart:
 
   resources:
     requests:
-      memory: "768Mi"
+      memory: "1Gi"
       cpu: "150m"
     limits:
-      memory: "768Mi"
+      memory: "1Gi"
       cpu: "600m"
 
   deployment:
@@ -33,7 +33,7 @@ microservice-chart:
       - type: memory
         metadata:
           type: Utilization
-          value: "70"
+          value: "90"
 
   envConfig:
     JAVA_TOOL_OPTIONS: >-
