--- a/helm/prod/mid/idpay-ranking/values.yaml
+++ b/helm/prod/mid/idpay-ranking/values.yaml
@@ -19,7 +19,19 @@ microservice-chart:
     replicas: 0 # This value must be set equal to autoscaling.minReplica
 
   autoscaling:
-    enable: false
+    minReplica: 0
+    maxReplica: 0
+    pollingInterval: 30 # seconds
+    cooldownPeriod: 300 # seconds
+    triggers:
+      - type: cpu
+        metadata:
+          type: Utilization # Allowed types are 'Utilization' or 'AverageValue'
+          value: "60"
+      - type: memory
+        metadata:
+          type: Utilization
+          value: "90"
 
   envSecret:
     APPLICATIONINSIGHTS_CONNECTION_STRING: appinsights-instrumentation-key
