--- a/helm/prod/top/idpay-kafka-connect/values.yaml
+++ b/helm/prod/top/idpay-kafka-connect/values.yaml
@@ -14,10 +14,10 @@ microservice-chart:
 
   resources:
     requests:
-      memory: "512Mi"
+      memory: "1Gi"
       cpu: "100m"
     limits:
-      memory: "1024Mi"
+      memory: "1Gi"
       cpu: "500m"
 
   deployment:
