chore: Enhance memory configuration in pods (#224)
* chore: lower initial memory usage to optimize resource allocation

* chore: reduce initial RAM percentage to optimize memory usage

* chore: lower initial RAM percentage to improve memory efficiency

* chore: increase initial memory usage to enhance performance

* chore: lower initial replica counts to optimize resource allocation

* chore: remove service unused

* chore: increase initial memory requests and limits for better performance

* chore: increase memory request on kafka connect

* chore: increase memory request on error topic

--- a/helm/prod/mid/idpay-recovery-error-topic/values.yaml
+++ b/helm/prod/mid/idpay-recovery-error-topic/values.yaml
@@ -6,10 +6,10 @@ microservice-chart:
 
   resources:
     requests:
-      memory: "768Mi"
+      memory: "1Gi"
       cpu: "150m"
     limits:
-      memory: "768Mi"
+      memory: "1Gi"
       cpu: "600m"
 
   deployment:
@@ -33,7 +33,7 @@ microservice-chart:
 
   envConfig:
     JAVA_TOOL_OPTIONS: >-
-      -XX:InitialRAMPercentage=75.0
+      -XX:InitialRAMPercentage=40.0
       -XX:MaxRAMPercentage=85.0
       -XX:+UseG1GC
       -XX:+UseContainerSupport
