--- a/helm/prod/ext/idpay-iban/values.yaml
+++ b/helm/prod/ext/idpay-iban/values.yaml
@@ -19,11 +19,23 @@ microservice-chart:
     replicas: 0 # This value must be set equal to autoscaling.minReplica
 
   autoscaling:
-    enable: false
+    minReplica: 0
+    maxReplica: 0
+    pollingInterval: 30 # seconds
+    cooldownPeriod: 300 # seconds
+    triggers:
+      - type: cpu
+        metadata:
+          type: Utilization # Allowed types are 'Utilization' or 'AverageValue'
+          value: "60"
+      - type: memory
+        metadata:
+          type: Utilization
+          value: "90"
 
   envConfig:
     JAVA_TOOL_OPTIONS: >-
-      -XX:InitialRAMPercentage=75.0
+      -XX:InitialRAMPercentage=40.0
       -XX:MaxRAMPercentage=85.0
       -XX:+UseG1GC
       -XX:+UseContainerSupport
