feat: increase proxy body size limit for transactions

--- a/helm/_global/idpay-transactions.yaml
+++ b/helm/_global/idpay-transactions.yaml
@@ -36,7 +36,7 @@ microservice-chart:
   ingress:
     create: true
     path: /idpaytransactions/(.*)
-
+    proxyBodySize: 2m
   podAnnotations: { }
 
   podSecurityContext:
