--- a/helm/uat/top/idpay-kafka-connect/values.yaml
+++ b/helm/uat/top/idpay-kafka-connect/values.yaml
@@ -24,7 +24,7 @@ microservice-chart:
     replicas: 1 # This value must be set equal to autoscaling.minReplica
 
   autoscaling:
-    enable: true
+    enable: false
     minReplica: 1
     maxReplica: 3
     pollingInterval: 30 # seconds
