--- a/helm/_global/idpay-merchant.yaml
+++ b/helm/_global/idpay-merchant.yaml
@@ -64,6 +64,7 @@ microservice-chart:
     DELETE_DELAY_TIME: "1000"
     HEALTH_MONGO_ENABLED: "false"
     KEYCLOAK_ADMIN_USER_ACTIONS_EMAIL_LIFESPAN: "604800"
+    DATA_WEB_PAGEABLE_MAX_PAGE_SIZE: "3000"
 
   externalConfigMapValues:
     idpay-common:
