--- a/helm/uat/top/idpay-admissibility-assessor/values.yaml
+++ b/helm/uat/top/idpay-admissibility-assessor/values.yaml
@@ -66,14 +66,15 @@ microservice-chart:
     CACHE_REFRESH_MS_RATE: "10000"
     REDIS_CACHE_ENABLED: "true"
 
-    PDND_BASE_URL: http://idpay-mock-microservice-chart:8080/idpay/mock/pdnd
+    PDND_BASE_URL: https://auth.uat.interop.pagopa.it
+  # PDND_BASE_URL: http://idpay-mock-microservice-chart:8080/idpay/mock/pdnd
     PDND_ACCESS_TOKEN_AUDIENCE: auth.uat.interop.pagopa.it/client-assertion
 
 
     ANPR_ENV: uat
     ANPR_AUTH_USERID: pagopa-idpay
-    #ANPR_BASE_URL: https://modipa-val.anpr.interno.it/govway/rest/in/MinInternoPortaANPR-PDND
-    ANPR_BASE_URL: http://idpay-mock-microservice-chart:8080/idpay/mock/anpr
+    ANPR_BASE_URL: https://modipa-val.anpr.interno.it/govway/rest/in/MinInternoPortaANPR-PDND
+    #ANPR_BASE_URL: http://idpay-mock-microservice-chart:8080/idpay/mock/anpr
     ANPR_KO_ANOMALY_CODES_LIST: EN122,TEST001
 
     #TODO Now we are using MOCK on APIM for ISEE
