--- a/helm/_global/idpay-transactions.yaml
+++ b/helm/_global/idpay-transactions.yaml
@@ -64,6 +64,8 @@ microservice-chart:
     BLOB_STORAGE_CONTAINER_REFERENCE: "invoices"
     BLOB_STORAGE_CSV_CONTAINER_REFERENCE: "reward-batches"
     INVOICE_STORAGE_SAS_DURATION_SECONDS: "60"
+    DATA_FACTORY_PIPELINE_NAME: "idpay_transaction_report"
+    DATA_FACTORY_RUN_PIPELINE_MAX_RETRIES: "3"
 
   externalConfigMapValues:
     idpay-common:
@@ -94,6 +96,8 @@ microservice-chart:
     PDV_DECRYPT_API_KEY: pdv-api-key
     BLOB_STORAGE_ACCOUNT_NAME: refund-storage-account-name
     REDIS_CONNECTION_URL: idpay-redis-primary-connection-url
+    DATA_FACTORY_RESOURCE_GROUP: data-factory-rg-name
+    DATA_FACTORY_NAME: data-factory-name
 
   externalConfigMapFiles:
     create: true
