--- a/helm/_global/idpay-transactions.yaml
+++ b/helm/_global/idpay-transactions.yaml
@@ -63,6 +63,7 @@ microservice-chart:
     HEALTH_MONGO_ENABLED: "false"
     BLOB_STORAGE_CONTAINER_REFERENCE: "invoices"
     BLOB_STORAGE_CSV_CONTAINER_REFERENCE: "reward-batches"
+    BLOB_STORAGE_REPORTS_CONTAINER_REFERENCE: "report-transactions"
     INVOICE_STORAGE_SAS_DURATION_SECONDS: "60"
     DATA_FACTORY_PIPELINE_NAME: "idpay_transaction_report"
     DATA_FACTORY_RUN_PIPELINE_MAX_RETRIES: "3"
