deploy branch LTBE-191 in dev

--- a/helm/dev/top/idpay-wallet/values.yaml
+++ b/helm/dev/top/idpay-wallet/values.yaml
@@ -1,7 +1,7 @@
 microservice-chart:
   image:
     repository: ghcr.io/pagopa/idpay-wallet
-    tag: snapshot-develop
+    tag: snapshot-LTBE-191
     pullPolicy: Always
 
   ingress:
