--- a/helm/_global/idpay-transactions.yaml
+++ b/helm/_global/idpay-transactions.yaml
@@ -63,7 +63,8 @@ microservice-chart:
     HEALTH_MONGO_ENABLED: "false"
     BLOB_STORAGE_CONTAINER_REFERENCE: "invoices"
     BLOB_STORAGE_CSV_CONTAINER_REFERENCE: "reward-batches"
-    BLOB_STORAGE_REPORTS_CONTAINER_REFERENCE: "report-transactions"
+    BLOB_STORAGE_REPORTS_TRANSACTIONS_CONTAINER_REFERENCE: "report-transactions"
+    BLOB_STORAGE_REPORTS_USER_DETAILS_CONTAINER_REFERENCE: "report-user-details"
     INVOICE_STORAGE_SAS_DURATION_SECONDS: "60"
     DATA_FACTORY_TRANSACTION_REPORT_PIPELINE_NAME: "idpay_transaction_report"
     DATA_FACTORY_USER_DETAILS_REPORT_PIPELINE_NAME: "idpay_user_details_report"
